added header icons and setting

--- a/styles.css
+++ b/styles.css
@@ -146,13 +146,6 @@
     --tw-contain-paint:  ;
     --tw-contain-style:  
 }
-.twcss .container, div[data-radix-popper-content-wrapper] .container, span[data-radix-focus-guard] .container, div[role="dialog"] .container, div[data-state="open"].dialog-background .container, body > div[role="dialog"].container, body > div[data-state="open"].dialog-background.container {
-    width: 100%;
-    margin-right: auto;
-    margin-left: auto;
-    padding-right: 2rem;
-    padding-left: 2rem
-}
 .twcss .\!container, div[data-radix-popper-content-wrapper] .\!container, span[data-radix-focus-guard] .\!container, div[role="dialog"] .\!container, div[data-state="open"].dialog-background .\!container, body > div[role="dialog"].\!container, body > div[data-state="open"].dialog-background.\!container {
     width: 100% !important;
     margin-right: auto !important;
@@ -160,12 +153,19 @@
     padding-right: 2rem !important;
     padding-left: 2rem !important
 }
+.twcss .container, div[data-radix-popper-content-wrapper] .container, span[data-radix-focus-guard] .container, div[role="dialog"] .container, div[data-state="open"].dialog-background .container, body > div[role="dialog"].container, body > div[data-state="open"].dialog-background.container {
+    width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+    padding-right: 2rem;
+    padding-left: 2rem
+}
 @media (min-width: 1400px) {
-    .twcss .container, div[data-radix-popper-content-wrapper] .container, span[data-radix-focus-guard] .container, div[role="dialog"] .container, div[data-state="open"].dialog-background .container, body > div[role="dialog"].container, body > div[data-state="open"].dialog-background.container {
-        max-width: 1400px
-    }
     .twcss .\!container, div[data-radix-popper-content-wrapper] .\!container, span[data-radix-focus-guard] .\!container, div[role="dialog"] .\!container, div[data-state="open"].dialog-background .\!container, body > div[role="dialog"].\!container, body > div[data-state="open"].dialog-background.\!container {
         max-width: 1400px !important
+    }
+    .twcss .container, div[data-radix-popper-content-wrapper] .container, span[data-radix-focus-guard] .container, div[role="dialog"] .container, div[data-state="open"].dialog-background .container, body > div[role="dialog"].container, body > div[data-state="open"].dialog-background.container {
+        max-width: 1400px
     }
 }
 .twcss .pointer-events-none, div[data-radix-popper-content-wrapper] .pointer-events-none, span[data-radix-focus-guard] .pointer-events-none, div[role="dialog"] .pointer-events-none, div[data-state="open"].dialog-background .pointer-events-none, body > div[role="dialog"].pointer-events-none, body > div[data-state="open"].dialog-background.pointer-events-none {
@@ -236,6 +236,9 @@
 }
 .twcss .table, div[data-radix-popper-content-wrapper] .table, span[data-radix-focus-guard] .table, div[role="dialog"] .table, div[data-state="open"].dialog-background .table, body > div[role="dialog"].table, body > div[data-state="open"].dialog-background.table {
     display: table
+}
+.twcss .hidden, div[data-radix-popper-content-wrapper] .hidden, span[data-radix-focus-guard] .hidden, div[role="dialog"] .hidden, div[data-state="open"].dialog-background .hidden, body > div[role="dialog"].hidden, body > div[data-state="open"].dialog-background.hidden {
+    display: none
 }
 .twcss .size-3, div[data-radix-popper-content-wrapper] .size-3, span[data-radix-focus-guard] .size-3, div[role="dialog"] .size-3, div[data-state="open"].dialog-background .size-3, body > div[role="dialog"].size-3, body > div[data-state="open"].dialog-background.size-3 {
     width: 0.75rem;
@@ -789,4 +792,8 @@
 }
 .twcss .\[\&\>p\]\:m-0>p, div[data-radix-popper-content-wrapper] .\[\&\>p\]\:m-0>p, span[data-radix-focus-guard] .\[\&\>p\]\:m-0>p, div[role="dialog"] .\[\&\>p\]\:m-0>p, div[data-state="open"].dialog-background .\[\&\>p\]\:m-0>p, body > div[role="dialog"].\[\&\>p\]\:m-0>p, body > div[data-state="open"].dialog-background.\[\&\>p\]\:m-0>p {
     margin: 0px
+}
+.twcss .\[\&\>p\]\:w-fit>p, div[data-radix-popper-content-wrapper] .\[\&\>p\]\:w-fit>p, span[data-radix-focus-guard] .\[\&\>p\]\:w-fit>p, div[role="dialog"] .\[\&\>p\]\:w-fit>p, div[data-state="open"].dialog-background .\[\&\>p\]\:w-fit>p, body > div[role="dialog"].\[\&\>p\]\:w-fit>p, body > div[data-state="open"].dialog-background.\[\&\>p\]\:w-fit>p {
+    width: -moz-fit-content;
+    width: fit-content
 }
