--- a/src/index.css
+++ b/src/index.css
@@ -48,18 +48,20 @@ div.metadata-property-value.dataedit {
   background-color: aqua;
 } */
 
-.dataedit {
-  /* METADATA INPUTS */
-  div&.metadata-property-value {
-    &:has(select.dropdown),
-    &:has(input[type="color"]) {
-      padding-inline-start: 5px;
-      &:focus-within {
-        background-color: var(--metadata-input-background);
-      }
+/* METADATA INPUTS */
+div.metadata-property-value {
+  &:has(select.dropdown),
+  &:has(input[type="color"]),
+  &:has(input.slider[type="range"]),
+  &:has(div.checkbox-container) {
+    padding: var(--size-4-1) var(--size-4-2);
+    &:focus-within {
+      background-color: var(--metadata-input-background);
     }
   }
+}
 
+.dataedit {
   div&-nested-setting-container {
     padding-left: 34px;
     padding-bottom: 16px;
